--- a/HTMLandCSS/lesson1/index.html
+++ b/HTMLandCSS/lesson1/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="title">
-        My App
+        My Favorite App
     </div>
     <div class="app"> 
-        <div class="screenshot">
-            <img src="square.jpg" alt="square">
+        <div class="image">
+            <img src="images/square.jpg" alt="square">
         </div>
         <div class="description">
             <p>OLAS asdasid adnasdkn jasdasidhn</p>
