--- a/HTMLandCSS/lesson1/index.html
+++ b/HTMLandCSS/lesson1/index.html
@@ -15,7 +15,7 @@
             <img src="images/square.jpg" alt="square">
         </div>
         <div class="description">
-            <p>OLAS asdasid adnasdkn jasdasidhn</p>
+            <p>Nice baby</p>
         </div>
     </div>
 </body>
