--- a/HTMLandCSS/lesson4/index.html
+++ b/HTMLandCSS/lesson4/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Framework Test page</title>
-    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col-md-12 img-fluid">
                 <img src="http://placekitten.com/1150/400" alt="profile">
-                <h3 class="carousel-caption text-center">NINJA</h1>
+                <h3 class="carousel-caption text-center">NINJA</h3>
             </div>
         </div>
         <hr>
@@ -39,17 +39,17 @@
 
         <div class="row text-center">
             <div class="col-md-4 img-fluid">
-                <img class="hand"src="http://placekitten.com/300/200" data-toggle="modal" data-target="#project1">
+                <img class="cursor-hand" src="http://placekitten.com/300/200" alt="" data-toggle="modal" data-target="#project1">
                 <h3>Name1</h3>
                 <h4>www.github.com</h4>
             </div>
             <div class="col-md-4 img-fluid">
-                <img class="hand" src="http://placekitten.com/300/200" alt="profile">
+                <img class="cursor-hand" src="http://placekitten.com/300/200" alt="profile">
                 <h3>Name1</h3>
                 <h4>www.github.com</h4>
             </div>
             <div class="col-md-4 img-fluid hand">
-                <img class="hand" src="http://placekitten.com/300/200" alt="profile">
+                <img class="cursor-hand" src="http://placekitten.com/300/200" alt="profile">
                 <h3>Name2</h3>
                 <h4>www.github.com</h4>
             </div>
@@ -66,7 +66,7 @@
                         <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
                     </div>
                     <div class="modal-body">
-                        <img class="img-responsive" src="images/555.jpeg">
+                        <img class="img-responsive" src="http://placekitten.com/300/200" alt="">
                         This was my first project in this class. I learned a lot about HTML and CSS.
                     </div>
                     <div class="modal-footer">
